<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_rounded"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/espaciado_l"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/accion_volver"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextoTituloHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/espaciado_s"
            android:text="@string/gastos_fijos_titulo" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaGastosFijos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/espaciado_l"
        android:paddingTop="@dimen/espaciado_s"
        android:paddingBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/tvVacio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/espaciado_l"
        android:gravity="center"
        android:text="@string/gastos_fijos_vacio"
        android:textColor="@color/texto_secundario"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNuevoGastoFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espaciado_l"
        android:backgroundTint="@color/acento_ambar"
        android:contentDescription="@string/gastos_fijos_accion_nuevo"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blanco" />

</androidx.constraintlayout.widget.ConstraintLayout>